# CardioVascularRisk_AssessmentModel

./: README.md  main.py  metrics.json  pyproject.toml
data/processed/: preprocessor.pkl  test.csv  train.csv
models/artifacts/: model.pkl
research/classification/: model_classification.ipynb
research/regression/: model_regression.ipynb
src/: config.py  logger.py  utils.py
src/components/: data_ingestion.py  data_preprocessing.py  model_building.py  model_evaluation.py
src/pipeline/: training_pipeline.py
