[project]
name = "cardiovascularrisk-assessmentmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chandan-aiops>=1.5.3",
    "dagshub>=0.6.5",
    "dvc>=3.66.1",
    "fastapi>=0.129.0",
    "imblearn>=0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "render>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "uvicorn>=0.40.0",
]
